--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="CSS/reset.css">
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body class="register_page">
 	<div class="register_page-modal">
@@ -29,7 +30,7 @@
 					<input type="text" name="Email" placeholder="Email adress" class="register_page-modal-email-field">
 				</label>
 				<label class="register_page-modal-field">
-					<input type="text" name="Pass" placeholder="Password" class="register_page-modal-pass-field">
+					<input type="password" name="Pass" placeholder="Password" class="register_page-modal-pass-field">
 				</label>
 				<button class="register_page-modal-btn">
 					Sign up for free
