--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<input type="text" name="Email" placeholder="Email adress" class="register_page-modal-email-field">
 				</label>
 				<label class="register_page-modal-field">
-					<input type="text" name="Pass" placeholder="Password" class="register_page-modal-pass-field">
+					<input type="password" name="Pass" placeholder="Password" class="register_page-modal-pass-field">
 				</label>
 				<button class="register_page-modal-btn">
 					Sign up for free
